--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,31 +17,31 @@ html(lang='en')
               li 
                 a(href='/records') Home
               li 
-                a(href='/records/reports') All reports
+                a(href='/records/reports') All Reports
               li 
-                a(href='/records/employees') All employees
+                a(href='/records/employees') All Employees
               li 
-                a(href='/records/locations') All locations
+                a(href='/records/locations') All Locations
               li 
-                a(href='/records/precautions') All precautions
+                a(href='/records/precautions') All Precautions
               li
-                a(href='/records/professions') All professions
+                a(href='/records/professions') All Professions
               li
-                a(href='/records/healthPractices') All Health Practices
+                a(href='/records/health-practices') All Health Practices
               li 
                 hr
               li 
-                a(href='/records/report/create') Create new report
+                a(href='/records/report/create') Create New Report
               li 
-                a(href='/records/employee/create') Create new employee
+                a(href='/records/employee/create') Create New Employee
               li 
-                a(href='/records/profession/create') Create new profession
+                a(href='/records/profession/create') Create New Profession
               li 
-                a(href='/records/healthPractice/create') Create new health practices
+                a(href='/records/health-practice/create') Create New Health Practice
               li
-                a(href='/records/location/create') Create new locations
+                a(href='/records/location/create') Create New Locations
               li
-                a(href='/records/precaution/create') Create new precautions
+                a(href='/records/precaution/create') Create New Precaution
                 
         div(class='col-sm-10')
           block content
