--- a/views/report_detail.pug
+++ b/views/report_detail.pug
@@ -16,7 +16,7 @@ block content
 
       dd(style="margin-left:20px;margin-top:5px") #{report.healthPractice.precautionType.name}
 
-      dt(style="margin-left:10px;margin-top:10px;") Place of Occurrance 
+      dt(style="margin-left:10px;margin-top:10px;") Place of Occurrence 
 
       if report.location.facilityName === 'HSC' 
         dd(style="margin-left:20px;margin-top:5px") Health Sciences Campus
